molly/media/site/css/smart.css
/* ... */
/* End Generic */

/* Breadcrumb Trail Styles */
div#bc-header {
    height:34px;
    width: 100%;
    background:url('../../site/images/gradients/bc-gradient.png') repeat-x top;
    overflow:hidden;
}
ol#bc {
    list-style:none;
    padding:0; margin:0;
    display:block;
}
ol#bc li {
    background-image:url('../../site/images/sep.png');
    background-repeat:no-repeat;
    background-position: center right;
    padding-right: 10px;
    padding-left:0px;
    display:block;
    float:left;
    height:30px;
    line-height:30px;
    overflow:hidden;
}
ol#bc li a {
    font-size:1em;
    vertical-align: top;
    color: #ffffff;
    text-decoration:none;
}
ol#bc img {
    border:0;
}

div#bc-title {
    overflow:hidden;
}

div#bc-title h1 {
    margin: 0;
    line-height:30px;
    padding-top: 0px;
    float:left;
    font-size:1.3em;
    text-align:left;
    color:#ffffff;
    white-space: nowrap;
	/*text-shadow: 1px 1px 0px #111;*/
}
div#bc-title h1.with-icon {
    background-repeat: no-repeat;
    background-position: left center;
    padding-left: 34px; /* Moves text to allow background breadcrumb image to coexist */
}
div#bc-title h1.places-header {     background-image:url('../../site/images/index-icons/places-bc.png');}
div#bc-title h1.contact-header {  background-image:url('../../site/images/index-icons/contact-bc.png');}
div#bc-title h1.webcams-header {  background-image:url('../../site/images/index-icons/webcams-bc.png');}
div#bc-title h1.podcasts-header { background-image:url('../../site/images/index-icons/podcasts-bc.png');}
div#bc-title h1.results-header {  background-image:url('../../site/images/index-icons/results-bc.png');}
div#bc-title h1.library-header {    background-image:url('../../site/images/index-icons/library-bc.png');}
div#bc-title h1.news-header {      background-image:url('../../site/images/index-icons/news-bc.png');}
div#bc-title h1.events-header {      background-image:url('../../site/images/index-icons/events-bc.png');}
div#bc-title h1.weather-header {  background-image:url('../../site/images/index-icons/weather-bc.png');}
div#bc-title h1.service_status-header {  background-image:url('../../site/images/index-icons/service_status-bc.png');}
div#bc-title h1.service-status-header {  background-image:url('../../site/images/index-icons/service_status-bc.png');}
div#bc-title h1.weblearn-header {  background-image:url('../../site/images/index-icons/weblearn-bc.png');}
div#bc-title h1.feature_vote-header {  background-image:url('../../site/images/index-icons/feature_vote-bc.png');}
div#bc-title h1.auth-header {  background-image:url('../../site/images/index-icons/auth-bc.png');}
/* End Breadcrumb Trail Styles */

/* Standard List Styles */
/* Content-List */
ul.content-list, ul.link-list, ol.search-results {
    border-left: 1px solid rgba(255, 255, 255, 0.33);
    list-style: none;
    padding: 0; margin: 0;

    -webkit-border-bottom-left-radius: 8px; -moz-border-radius-bottomleft: 8px; border-bottom-left-radius: 8px;
    -webkit-border-bottom-right-radius: 8px;    -moz-border-radius-bottomright: 8px;    border-bottom-right-radius: 8px;
}

ul.content-list {
    background: #eee;
    background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#eee));
    background: -moz-linear-gradient(center top, #f3f3f3, #eee);
    color:#222;
}
ul.content-list a {color: #00f;}
ul.content-list h3 {
    color:#222;
    text-align:left;
    font-size:0.8em;
    padding:0;
    margin-bottom:5px;
}
ul.content-list li {
    padding:10px;
    border-top:1px solid #98a1ac;
    background:none;
    color: #222;
}
ul.content-list li:first-child, ul.link-list li:first-child, ol.search-results li:first-child {
    border-top:none;
}
/* End Content-List */

/* Link-List */
ul.link-list, ol.search-results {
    background-color:#002B4C;
    color:#ffffff;
}
ul.link-list li, ol.search-results li {
    font-size:1.3em;
    border-top:1px solid #98a1ac;
    padding: 10px;
    display:block;
}
ul.link-list li a, ol.search-results li a {
    color:#ffffff;
    text-decoration:none;
    display:block;

    padding-right: 20px; /* Moves background image (ul li a) away from edge */
    text-align: left;
    background-position: right center;
    background-repeat: no-repeat;
    background-image:url('../../site/images/icons/list-arrow.png'); /* Default background image */
}

ol.search-results li a img {
    float:left;
    border:0;
    margin-right: 5px;
    margin-bottom: 5px;
}

ul.link-list li a.go-back, ol.search-results li a.go-back {
    background-image:url('../../site/images/icons/list-arrow-left.png'); /* Default background image */
}
/* End Link-List */

ul li.page-break {
    border-top:1px solid #9c0c0a;
}

ul.stand-alone {
    margin: 10px;
}

/* Background images primarily for list items */
ul.link-list li a.phone {background-image:url('../../site/images/icons/list-phone.png');}
ul.link-list li a.email {background-image:url('../../site/images/icons/list-email.png');}
ul.link-list li a.external {background-image:url('../../site/images/icons/list-external.png');}
ul.link-list li a.external-mobile {background-image:url('../../site/images/icons/list-external-mobile.png');}
ul.link-list li a.audio {background-image:url('../../site/images/icons/list-audio.png');}
ul.link-list li a.video {background-image:url('../../site/images/icons/list-video.png');}
    /* End background images for list items */
/* End Standard List Styles */


/* Webcams/Maps Display */
div.backgrounded-image {
    background-repeat:no-repeat;
    background-position: center center;
    position: relative;
}
a.zoom-out, a.zoom-in {
    padding: 5px;
    display: block;
}
a.zoom-out {float: left;}
a.zoom-in {float: right;}
a.zoom-out img, a.zoom-in img { border:0 ;}
div.osm-license {
    position: absolute;
    top: auto;
    right: 0;
    bottom: 0;
    font-size: 0.7em;
    text-align:right;
    padding: 2px;
    background: #ffffff;
    background-opacity: 0.5;
    color: #000000;
}
/* ... */

